[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
# need wasm-bindgen for JsCast
wasm-bindgen = "0.2"
web-sys = "0.3.60"
gloo-console = { version = "0.2.3", feature = ["HtmlInputElement"]}